# src/server/pkg/utils/passwordHash.go
@@ -9,7 +9,7 @@ import (
 // @Description Hash password of choice
 // @Description and returns the hashed password.
 // @Tags Utils
-// @Param password string string true
+// @Param password body string true "Password"
 func HashPassword(password string) (string, error) {
 	bytes, err := bcrypt.GenerateFromPassword([]byte(password), 14)
 	return string(bytes), err
@@ -19,8 +19,8 @@ func HashPassword(password string) (string, error) {
 // @Summary Compares password with the hashed string
 // @Description Compares password with the hashed string
 // @Tags Utils
-// @Param password string string true
-// @Param hash string string true
+// @Param password body string true "Password"
+// @Param hash body string true "Password hash"
 func CheckPasswordHash(password, hash string) bool {
 	err := bcrypt.CompareHashAndPassword([]byte(hash), []byte(password))
 	return err == nil
